# JWT_Verification_Flask_Extension

./: .gitignore  LICENSE  README.md  pyproject.toml  run_app copy.sh  run_backend.sh
certs/: api.localtest.me-key.pem  api.localtest.me.pem
docs/: AI_PROMPT.md  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_SUMMARY.md  EXAMPLES.md  INDEX.md  QUICKREF.md  README.md  SECURITY.md
examples/auth0_demo/: .env.example  README.md  app.py  app_config.py  backend.py  login_provider.py  run.sh  run_backend.sh  run_login_provider.sh
examples/auth0_demo/static/: style.css
src/: backendAPI.py  login_provider.py  main.py
src/extension/: JWT_verification.py
src/extension/jwt_verification/: __init__.py  authorization.py  cache_stores.py  errors.py  extractors.py  flask_extension.py  protocols.py  refresh_gate.py  verifier.py
src/extension/jwt_verification/key_providers/: auth0.py
src/jwt_verification/: __init__.py  authorization.py  cache_stores.py  errors.py  extractors.py  flask_extension.py  protocols.py  refresh_gate.py  verifier.py
src/jwt_verification/key_providers/: __init__.py  auth0.py
src/static/: style.css
tests/: test_integration.py
tests/JWT_verification/: conftest.py  test_auth0_provider.py  test_cache_stores.py  test_extractor.py  test_flask_extension.py  test_jwt_verifier.py  test_rbac.py  test_refresh_gate.py
