[project]
name = "auth0_Flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "auth0-server-python>=1.0.0b8",
    "authlib>=1.6.8",
    "flask>=3.1.3",
    "pyjwt[crypto]>=2.11.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
