[project]
name = "flask-jwt-verification"
version = "1.0.0"
description = "Production-ready Flask extension for JWT authentication and authorization with Auth0 integration"
readme = "README.md"
authors = [{ name = "Shayman" }]
license = { text = "MIT" }
requires-python = ">=3.14"
keywords = ["flask", "jwt", "auth0", "authentication", "authorization", "rbac"]


dependencies = [
    "authlib>=1.6.8",
    "cffi>=2.0.0",
    "flask>=3.0.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
redis = ["redis>=5.0.0"]
examples = [
    "auth0-server-python>=1.0.0b8",
    "authlib>=1.6.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "cffi>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/flask-jwt-verification" # Update actual GitHub URL
Documentation = "https://github.com/yourusername/flask-jwt-verification/tree/main/src/jwt_verification"
Repository = "https://github.com/yourusername/flask-jwt-verification"
Issues = "https://github.com/yourusername/flask-jwt-verification/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jwt_verification"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
